--- a/install
+++ b/install
@@ -212,6 +212,10 @@ fi
 #DFN: LA_NG="de_DE es_ES fr_FR it_IT ru_RU"
 
 #PKG: bash
+#PKG: bats
+#PKG: bats-assert
+#PKG: bats-file
+#PKG: bats-support
 #PKG: bzip2
 #PKG: coreutils
 #PKG: cryptsetup
