--- a/install
+++ b/install
@@ -559,9 +559,9 @@ fi
 #PKG: dotnet-sdk
 #PKG: skia-sharp
 #PKG: lua
-#PKG: rust
-#PKG: rust-analyzer
+##PKG: rust
 #PKG: rustup
+#PKG: rust-analyzer
 #PKG: julia
 #PKG: gcc-fortran
 #PKG: gcc-objc
