--- a/install
+++ b/install
@@ -918,25 +918,18 @@ fi
 #PKG: docbook-xsl
 #PKG: docbook-mathml
 #PKG: tidy
-#PKG: texlive-xelatex
+#PKG: texlive-basic
+#PKG: texlive-xetex
 #PKG: texlive-bibtexextra
-#PKG: texlive-core
-#PKG: texlive-fontsextra
-#PKG: texlive-formatsextra
-#PKG: texlive-games
-#PKG: texlive-humanities
-#PKG: texlive-latexextra
-#PKG: texlive-music
-#PKG: texlive-pictures
 #PKG: texlive-pstricks
-#PKG: texlive-publishers
-#PKG: texlive-science
-#PKG: texlive-langchinese
+#PKG: texlive-latex
+#PKG: texlive-latexrecommended
+#PKG: texlive-latexextra
+#PKG: texlive-fontsrecommended
+#PKG: texlive-fontsextra
+#PKG: texlive-mathscience
 #PKG: texlive-langcyrillic
-#PKG: texlive-langextra
 #PKG: texlive-langgreek
-#PKG: texlive-langjapanese
-#PKG: texlive-langkorean
 #PKG: mathjax
 #PKG: qtikz
 #PKG: latex2html
